--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Maker pre-launch landing page" />
+    <meta name="description" content="Wirey Agency Pre-Launch" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,10 +22,10 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta name="twitter:site" content="@Yazdun" />
-    <meta name="twitter:creator" content="@Yazdun" />
-    <meta property="twitter:title" content="Maker pre-launch landing page" />
-    <title>Maker</title>
+    <meta name="twitter:site" content="@@DeaThGuNNNNN" />
+    <meta name="twitter:creator" content="@@DeaThGuNNNNN" />
+    <meta property="twitter:title" content="Wirey Agency Pre-Launch" />
+    <title>Wirey</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
